# ozi

./: .dockerignore  .editorconfig  .gitignore  LICENSE  Makefile  build.py  docker-compose.yml  message_sample.json  message_sample.txt  pyproject.toml  readme.md  requirements.txt  sample_prompt.txt
analytics/: Dockerfile  consumer.py  init_db.py  readme.md  requirements.txt  table_queries.py
analytics/consumers/: __init__.py  base.py  config.py  consumer.py  consumers.py  sample_transformed_msgs.txt
consumers/: Dockerfile  __init__.py  base.py  config.py  consumer.py  consumers.py  requirements.txt
deploys/aws/: deploy_ec2.sh
duckdb_data/: ozi.duckdb  ozi.duckdb.wal
llm/: base.py  base_llm.py  factory.py
llm/chatgpt/: connection.py  llm.py
producers/: Dockerfile  base.py  config.py  poller.py  pollers.py  requirements.txt
proto/: gossip_pb2.py  gossip_pb2_grpc.py  hub_event_pb2.py  hub_event_pb2_grpc.py  hub_state_pb2.py  hub_state_pb2_grpc.py  job_pb2.py  job_pb2_grpc.py  message_pb2.py  onchain_event_pb2.py  onchain_event_pb2_grpc.py  request_response_pb2.py  request_response_pb2_grpc.py  rpc_pb2.py  rpc_pb2_grpc.py  sync_trie_pb2.py  sync_trie_pb2_grpc.py  username_proof_pb2.py  username_proof_pb2_grpc.py
rag/: Dockerfile  docker-compose.yml  requirements.txt
rag/api/: main.py
rag/api/models/: models.py
rag/api/services/: query.py  search.py
rag/api/utils/: chroma.py  llm_prompts.py  markdown_formatter.py  sql_formatter.py  sql_validator.py  table_queries.py
rag/app/: main.py
rag/llm/: base.py  factory.py
rag/llm/chatgpt/: connection.py  (+1 more)
