[tool.poetry]
name = "farcaster-grpc-client"
version = "0.1.0"
description = "Poller for Farcaster Hubble node using gRPC"
authors = ["Ashley Mitchell"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
grpcio = ">=1.60.0"
grpcio-tools = ">=1.60.0"
protobuf = ">=4.25.1"
kafka-python = ">=2.0.2"
httpx = ">=0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grpc-poll = "producers.pollers:FarcasterGRPCPoller.run"

[tool.poetry.extras]
dev = ["black", "pytest"]